feat: Upgraded to Spring Boot 3.5.7, Gradle 9.1.0, Java 25, and replaced with Tomcat; added charts to the homepage dashboard; added an idle countdown reminder; added password change upon first login; added client-side password strength settings; allowed custom sub-versions for AC OIDC IdPs and enabled login without recognizing IdP Type; optimized Basic Auth and ClientCredential performance; removed customization and Line alerts; fixed Mail template and API registration copying issues; and fixed Mocktest errors.