@@ -2,7 +2,6 @@ package tpi.dgrv4.dpaa.es;
 
 import java.io.IOException;
 import java.io.UncheckedIOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
@@ -10,6 +9,7 @@ import java.nio.file.Paths;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.stream.Stream;
 
 import tpi.dgrv4.common.utils.StackTraceUtil;
@@ -21,11 +21,13 @@ public class DiskSpaceMonitor {
 	private static final int DEFAULT_MAX_FILES = 10000; // 默認最大文件數
 	private static final long CHECK_INTERVAL_MS = 60000; // 每分鐘檢查一次
 
+	private static final AtomicBoolean isTouchEsWriteThreshold = new AtomicBoolean(false);
+
 	private long maxDirSizeBytes;
 	private int maxFiles;
-	private volatile boolean pauseWriting = false;
-	private ScheduledExecutorService scheduler;
-	private boolean isRunning = false;
+
+	private final ScheduledExecutorService scheduler = Executors.newSingleThreadScheduledExecutor(Thread.ofVirtual().name("DiskSpaceMonitor-Thread-").factory());
+	private final AtomicBoolean isRunning = new AtomicBoolean(false);
 
 	// Singleton 實例
 	private static DiskSpaceMonitor instance;
@@ -40,11 +42,13 @@ public class DiskSpaceMonitor {
 		this.maxDirSizeBytes = maxDirSizeBytes;
 		this.maxFiles = maxFiles;
 
-		scheduler = Executors.newScheduledThreadPool(1, runnable -> {
-		    Thread thread = new Thread(runnable, "DiskSpaceMonitor-Thread");
-		    thread.setDaemon(true);  // 可選，設置為守護線程
-		    return thread;
-		});
+//		scheduler = Executors.newSingleThreadScheduledExecutor(Thread.ofVirtual().name("DiskSpaceMonitor-Thread-").factory());
+
+//				Executors.newScheduledThreadPool(1, runnable -> {
+//		    Thread thread = new Thread(runnable, "DiskSpaceMonitor-Thread");
+//		    thread.setDaemon(true);  // 可選，設置為守護線程
+//		    return thread;
+//		});
 	}
 
 	// 獲取單例實例的方法（使用默認值）
@@ -76,7 +80,7 @@ public class DiskSpaceMonitor {
 
 	// 啟動監控
 	public synchronized void start() {
-		if (!isRunning) {
+		if (isRunning.compareAndSet(false, true)) {
 			// 確保日誌目錄存在
 			try {
 				if (!Files.exists(LOG_DIR)) {
@@ -84,15 +88,14 @@ public class DiskSpaceMonitor {
 				}
 
 				// 創建具有自定義線程名稱的排程器
-				scheduler = Executors.newScheduledThreadPool(1, runnable -> {
-				    Thread thread = new Thread(runnable, "DiskSpaceMonitor-Thread");
-				    thread.setDaemon(true);  // 可選，設置為守護線程
-				    return thread;
-				});
+//				scheduler = Executors.newScheduledThreadPool(1, runnable -> {
+//				    Thread thread = new Thread(runnable, "DiskSpaceMonitor-Thread");
+//				    thread.setDaemon(true);  // 可選，設置為守護線程
+//				    return thread;
+//				});
 
 				// 排程執行檢查任務 (2分後才會啟動排程)
 				scheduler.scheduleWithFixedDelay(this::checkDiskSpace, 120000, CHECK_INTERVAL_MS, TimeUnit.MILLISECONDS);
-				isRunning = true;
 				TPILogger.tl.info("DiskSpaceMonitor started, monitoring: " + LOG_DIR.toAbsolutePath() + ", maxSize="
 						+ formatSize(maxDirSizeBytes) + ", maxFiles=" + maxFiles);
 				
@@ -104,9 +107,8 @@ public class DiskSpaceMonitor {
 
 	// 停止監控
 	public synchronized void stop() {
-		if (isRunning) {
+		if (isRunning.get()) {
 			scheduler.shutdown();
-			isRunning = false;
 			TPILogger.tl.info("DiskSpaceMonitor stopped");
 		}
 	}
@@ -125,35 +127,21 @@ public class DiskSpaceMonitor {
 			// 使用跨平台方法計算目錄大小（替換原本使用系統命令的部分）
 			currentFilesSize = calculateDirectorySize(LOG_DIR);
 
-			boolean oldStatus = pauseWriting;
-
-			//  0.8 為狀態切換的緩衝區, 目錄大小在邊界值附近波動：10.01GB → 9.99GB → 10.02GB → 9.98GB
-			// 若沒有緩衝區，狀態會頻繁切換：暫停 → 恢復 → 暫停 → 恢復
-			// 「抖動」會造成系統不穩定且產生大量通知
-			// 根據結果決定是否暫停寫入
-			if (currentFilesSize > maxDirSizeBytes || currentFileCount > maxFiles) {
-				pauseWriting = true;
-			} else if (currentFilesSize < maxDirSizeBytes * 0.8 && currentFileCount < maxFiles * 0.8) {
-				// 新增緩衝區，避免頻繁切換狀態
-				pauseWriting = false;
-			}
+			boolean oldStatus = isTouchEsWriteThreshold.getAndSet(currentFilesSize >= maxDirSizeBytes || currentFileCount >= maxFiles);
+			boolean newStatus = isTouchEsWriteThreshold.get();
 			
 			TPILogger.tl.info(String.format(
 					"...oldPauseWriting=%b, if(FileSize=(%s > %s) || currentFilesCount=(%d > %d)) = pauseWriting=%b",
 					oldStatus, formatSize(currentFilesSize), formatSize(maxDirSizeBytes),
-					currentFileCount, maxFiles, pauseWriting));
+					currentFileCount, maxFiles, newStatus));
 
 			// 只有狀態變化時才通知
-			if (oldStatus != pauseWriting) {
-				notifyApplications();
-				TPILogger.tl.warn("API-Log to BulkFile Writing status changed to: " + (pauseWriting ? "paused" : "active") + " (Size: "
+			if (oldStatus != newStatus) {
+				TPILogger.tl.warn("API-Log to BulkFile Writing status changed to: " + (newStatus ? "paused" : "active") + " (Size: "
 						+ currentFilesSize + "/" + formatSize(maxDirSizeBytes) + ", Files: " + currentFileCount + "/"
 						+ maxFiles + ")");
 			}
-		} catch (NoSuchFileException e) {
-			TPILogger.tl.trace("找不到檔案, 可能被 clear 排程刪掉了, 所以不用處理它");
-			checkDiskSpace();
-		} catch (UncheckedIOException e) {
+		} catch (NoSuchFileException | UncheckedIOException e) {
 			TPILogger.tl.trace("找不到檔案, 可能被 clear 排程刪掉了, 所以不用處理它");
 			checkDiskSpace();
 		} catch (Exception e) {
@@ -188,44 +176,10 @@ public class DiskSpaceMonitor {
 		return String.format("%.2f %s", sizeDbl, units[unitIndex]);
 	}
 
-	private void notifyApplications() {
-		// 實現通知機制，將狀態文件寫入日誌目錄
-		try {
-			Path statusFile = LOG_DIR.resolve(".write_status");
-			if (pauseWriting) {
-			    Files.write(statusFile, "PAUSE".getBytes(StandardCharsets.UTF_8));
-			} else {
-			    Files.deleteIfExists(statusFile);
-			}
-		} catch (IOException e) {
-			TPILogger.tl.error("Failed to update status file[.write_status]: " + StackTraceUtil.logTpiShortStackTrace(e));
-		}
-	}
 
-	// 供應用程序查詢當前狀態的方法
-	public boolean shouldPauseWriting() {
-		return pauseWriting;
-	}
-
-	// 如果為 true，表示應該暫停寫入；如果為 false，表示可以正常寫入
-	public static boolean isPauseRequired() {
-		return getInstance().shouldPauseWriting();
-	}
 
 	// 使用 Path API 直接檢查狀態，適用於獨立的應用程序
 	public static boolean checkStatusFromFile() {
-		try {
-			Path statusFile = LOG_DIR.resolve(".write_status");
-			if (Files.exists(statusFile)) {
-				String status = new String(Files.readAllBytes(statusFile), StandardCharsets.UTF_8).trim();
-				return "PAUSE".equals(status); // 暫停寫入 log
-			}
-			return false; // 允許寫入
-		} catch (NoSuchFileException e) {
-			return false;
-		} catch (Exception e) {
-			TPILogger.tl.error("Error reading status file: " + StackTraceUtil.logTpiShortStackTrace(e));
-			return false; // 發生錯誤時默認允許寫入
-		}
+		return isTouchEsWriteThreshold.get();
 	}
 }
